--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.26",
@@ -16,8 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
